Adding Dan & Oli's Shape Experimentation + Main Files Project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /projectChartr/dist/
 /Event_Handling/eventHandling/nbproject/private/
 /Event_Handling/eventHandling/build/
+/javashapes/build/
+/javashapes/nbproject/private/
